@@ -379,6 +379,27 @@ class NormalSurface : public ShortOutput<NormalSurface> {
         NormalSurface(NormalSurface&&) noexcept = default;
 
         /**
+         * Create the empty surface within the given triangulation.
+         *
+         * All normal coordinates will be zero.
+         *
+         * @param triang the triangulation in which this normal surface resides.
+         */
+        NormalSurface(const Triangulation<3>& triang);
+
+        /**
+         * Create the empty surface within the given triangulation.
+         *
+         * All normal coordinates will be zero.
+         *
+         * \nopython Instead use the version that takes a "pure" triangulation.
+         *
+         * @param triang a snapshot, frozen in time, of the
+         * triangulation in which this normal surface resides.
+         */
+        NormalSurface(const SnapshotRef<Triangulation<3>>& triang);
+
+        /**
          * Creates a new normal surface inside the given triangulation with the
          * given coordinate vector, using the given vector encoding.
          *
